Переименование методов getById, возвращающих Optional, в findById; удаление лишних @Transactional; удаление закомиченного теста